/*
 * *
 *  ViewFeedback
 *
 *  Copyright (c) 2018. sasakik
 *
 *  This software is released under the MIT License.
 *  http://opensource.org/licenses/mit-license.php
 *
 */

package com.sasakik.simplecalculator.view;

/**
 * Created by sasakik on 2018/01/06.
 */

public interface SCViewFeedbackListener {
    public void onUpdate(String value);
}
